--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,7 +11,11 @@ platforms:
 #      box: puppetlabs/debian-6.0.10-64-nocm
 #      box_url: https://atlas.hashicorp.com/puppetlabs/boxes/debian-6.0.10-64-nocm/versions/1.0.2/providers/virtualbox.box
   - name: debian-7.8
+    run_list:
+      - recipe[apt]
   - name: debian-8.2
+    run_list:
+      - recipe[apt]
 
 suites:
   - name: default
